// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header renders correctly 1`] = `
<header
  className="sc-jSFkmK fHXQzz"
  id="header"
  loading={false}
>
  <div
    className="sc-bdnylx eSgtuu"
    loading={false}
  >
    <img
      alt="Hello World"
      src="https://example.com/pankaj.jpg"
    />
  </div>
  <div
    className="sc-eCApGN bFSBXu content"
  >
    <div
      className="sc-hKFyIo bssFZl"
      loading={false}
    >
      <h1
        className="sc-gtssRu EDmEt"
      >
        Hello World
      </h1>
      <p
        className="sc-dlnjPT hbbtex"
      >
        Welcome to the Homepage
      </p>
    </div>
  </div>
</header>
`;

exports[`Header renders correctly with children 1`] = `
<header
  className="sc-jSFkmK fHXQzz"
  id="header"
  loading={false}
>
  <div
    className="sc-bdnylx eSgtuu"
    loading={false}
  >
    <img
      alt="Hello World"
      src="https://example.com/pankaj.jpg"
    />
  </div>
  <div
    className="sc-eCApGN bFSBXu content"
  >
    <div
      className="sc-hKFyIo bssFZl"
      loading={false}
    >
      <h1
        className="sc-gtssRu EDmEt"
      >
        Hello World
      </h1>
      <p
        className="sc-dlnjPT hbbtex"
      >
        Welcome to the Homepage
      </p>
    </div>
  </div>
  Children Tag
</header>
`;
